k8s/gke/neg-ingress-glb/hello-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glb-ingress
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific 
        path: "/*"
        backend:
          service:
            name: hello-kubernetes
            port:
              number: 80
